--- a/server/.env
+++ b/server/.env
@@ -1,10 +1,10 @@
 PORT=5000
 MONGODB_URI=mongodb://localhost:27017/kas-kelas
 # Atau gunakan MongoDB Atlas (ganti <db_password> dengan password Anda):
-# MONGODB_URI=mongodb+srv://SigmaboyKurangMewing:<db_password>@material-dashboard.whyz4.mongodb.net/?appName=Material-Dashboard
+# MONGODB_URI=
 
 # WhatsApp Configuration
-FONNTE_API_TOKEN=nfbJg3AToThMuurynxg8
+FONNTE_API_TOKEN=
 WA_TEST_MODE=false
 AUTO_REMINDER_ENABLED=true
 
